# ChangeLog for www-apps/dokuwiki
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/dokuwiki/ChangeLog,v 1.75 2015/03/01 17:39:24 jmbsvicetto Exp $

*dokuwiki-20140929c (01 Mar 2015)

  01 Mar 2015; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +dokuwiki-20140929c.ebuild:
  Bump to the 20140929c release - bug 541712.

  22 Dec 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  -dokuwiki-20140505b.ebuild, -dokuwiki-20140929a.ebuild:
  Drop old vulnerable versions.

  21 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dokuwiki-20140929b.ebuild:
  Stable for x86, wrt bug #532190

  21 Dec 2014; Agostino Sarubbo <ago@gentoo.org> dokuwiki-20140929b.ebuild:
  Stable for amd64, wrt bug #532190

*dokuwiki-20140929b (12 Dec 2014)
*dokuwiki-20140505c (12 Dec 2014)

  12 Dec 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +dokuwiki-20140505c.ebuild, +dokuwiki-20140929b.ebuild,
  -dokuwiki-20121013.ebuild:
  Bump dokuwiki versions to address an XSS with SWF uploads - announcement
  https://www.freelists.org/post/dokuwiki/XSS-via-SWF-uploads-hotfix,3

  27 Oct 2014; Agostino Sarubbo <ago@gentoo.org> dokuwiki-20140505b.ebuild,
  dokuwiki-20140929a.ebuild:
  Stable for x86, wrt bug #522146

  27 Oct 2014; Agostino Sarubbo <ago@gentoo.org> dokuwiki-20140505b.ebuild,
  dokuwiki-20140929a.ebuild:
  Stable for amd64, wrt bug #522146

*dokuwiki-20140929a (13 Oct 2014)

  13 Oct 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +dokuwiki-20140929a.ebuild, -dokuwiki-20120125.ebuild,
  -dokuwiki-20120125a.ebuild, -dokuwiki-20130510a.ebuild,
  -dokuwiki-20131208.ebuild, -dokuwiki-20140929.ebuild:
  Add 20140929a release. Drop old. Fixes bug 522146.

*dokuwiki-20140929 (05 Oct 2014)
*dokuwiki-20140505b (05 Oct 2014)

  05 Oct 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +dokuwiki-20140505b.ebuild, +dokuwiki-20140929.ebuild,
  -dokuwiki-20140505.ebuild: