@@ -3,17 +3,19 @@ Hash: SHA256
 
 AUX postinstall-en.txt 1791 SHA256 405a54af08d9d08f903bbd33398e7d716ab37228b2ff0e4af81dc2368d64f2bf SHA512 a7492810fad0c5ca6f3e724679ae753934b7a92f90663dc0e93608dca06d1a4b2ba04842e0755955b9b3e6ba63742a5b3c882d097c8c0e2df178d044f471c5b5 WHIRLPOOL 1389c2f1b7e550fa36b979664872de257c7177b4cc5976e90dcd86e4888ffaf439688a8d842490a806a58af9c689c2c40160e2969b7fc023886411a3a8893d0a
 DIST dokuwiki-2014-05-05c.tgz 3175216 SHA256 3a8066216825008f8bed9efc552ac11d9372aa0a603d96416fb2cac64cd9dabd SHA512 4a0eebb1c49408aad8e16701bf30adb387c3b68f3af40d75a849ce962198430af9a1df1a029b872195176f108eb7a655ee75c6625decfd445acd5cdbe715f764 WHIRLPOOL f1340931a153530e48f8c16d96f57b64afd5a6352e64e905bcb8ed9291b8b238555f33dbb55ae166dbfaef0337e19e1057095f46ed826c5edd801ab505f95c34
+DIST dokuwiki-2014-05-05d.tgz 3218335 SHA256 734573e8319ac50bc521dc7b9b0f8afa43a8a9a77bb151c39fc709b03dd030ae SHA512 507a5a4271ca57a05ad7dcf0d0d5222189f5855119c8392b074403f03df1d1ead9ecf7d5b2998e736d88092a3c7ee15999947e99e423a8586a30a4a4f1e469bd WHIRLPOOL fb67895fb758a4da1966eac0e814280999542cbf10e3a1e7c38f3de3f27a6ac54aeec5d0a88fca8abb92996310b6333481ff216a45bc0c2bda3fa88da2c07064
 DIST dokuwiki-2014-09-29b.tgz 3241815 SHA256 7f7c705997278cb6769a91a1a7c38053a3edb0663e7ac8285f613c9d849a5487 SHA512 e37cf758d708c8c97668accfe98cbed247acff6c77892160a7f6e9fe8c4b06ea0ab5c542feea85394e35cb4703b348be47f9e25a90750d4b2b3bdc0ba75269f7 WHIRLPOOL 9e8d861b744c5f06612a9f29474007b835e46bd4b1b6139f5a7bffd07e1b9a7ee1f1263f2752757c5c504b3ae04326e938d7aad04914e8a4cf392f368a1564a4
 DIST dokuwiki-2014-09-29c.tgz 3283291 SHA256 5ff1f8699d7aa8f455f8211f10656505037bee19293f90c5ed79a963d5623f09 SHA512 322b58c0b1929a34e79470609644331c4bd7d547212515460627a1ce919819c031f60a8d29a56e3c729c631d1b756316cc226719483ca3cc78a600dd9aaf8739 WHIRLPOOL 385c7a5c7e9a9a40ad0fd5b098ac4cc74237798020a580b128a89b39c7883ba0b1c267660bc0baf2357036e342317b7a20bfd35d4596553fb255f070e84788cf
 EBUILD dokuwiki-20140505c.ebuild 1436 SHA256 bea71ddaba7a25d732e18ee29902c3e245251391075e90d8de9308b95e75d3d5 SHA512 e2f915a5bb50651cd33dcfa700c5916d629dd8fcfe53a5f8abdad4d02dc2493e63bc79e29be4ae71b54c1f4d786b6d40d4a971429340bcdc5fe72baa9c87ff0a WHIRLPOOL 56deafd18fd8b5aa87afc8da3d8604fe323a7a952b2df4db810dfcf4fb42ed45e0e362e0570cdfaf02c950888adb280742fc0b1d07ff244457b4f72dd83e184e
+EBUILD dokuwiki-20140505d.ebuild 1436 SHA256 2c37aa68ad71bbf2cd5551e4104cc370ffe66d720c437bec93d001170e5fd70b SHA512 aae5bd2286eb2759d80eb982c490e8c8d065266db0579fca9d48e1dc08aad49deb20bef7e3b2708d66667599e767249ab4b924f9a7daa9ae7db0853652b24433 WHIRLPOOL e3c731282a531978d7c62a7474e471994cf786de8161d1ddfc5d849465c0fb594475aac9b5200bc3330f2ea7e1372e6aabc66ecc6326688bb2346079d00ae983
 EBUILD dokuwiki-20140929b.ebuild 1427 SHA256 ec01a3ec36dfc71f6f629cdd89eb42116707bcfbb8b7e4c24d03883dfa17236c SHA512 1f2808030566169ad4a4ac447b857572bd84ba1f85ef259e39345d0f2db5cb46a67ddf82ec1dc6619aab229bc2a57e4c522ad64bdac460b05b6d7b806cc1a112 WHIRLPOOL f7f1b1f7ec9b2371cfcf0dd00da1a5304a5d7999371d8fa4164a914712079ea512fb7dea562091edbac003fa1f0493e3cdc01e0761573ba26c25ea04dc6411e4
 EBUILD dokuwiki-20140929c.ebuild 1437 SHA256 7192e54c904112a8286c14d5947c58b3019a39008fc6e803c7b888a2dd65e898 SHA512 74be0f1c6eba9e8277978794c306a764c626d74473d126fb84fab3a668523bfeca4dc860cf8b368e3b332e004d9bc2e3b5fac5726028c78fb52a622bd2a5bbb2 WHIRLPOOL 9b50d5a6368d1653f513f49ab95106b6ed5cf590ddae2fdbd68fc6841852e7f56c83c6f2de72f07744d28d1b6becea79177fced75ffbe6304e03fab15255bd9f
-MISC ChangeLog 12883 SHA256 97805ce398d10acaf10f7848f0ceef8d4ca8360f81d99410db0d217996b8f3c9 SHA512 16e89398385417a7c50a1e807bb6766516a8dd4d9c94f9b6feb05e2139ea62d0f908d8c768fdb1312526f2948a62dbbd093949234f4cfbad0b3b618e4eb8c63e WHIRLPOOL e43e144f453f9edf7df31d33208a942ebf8b4b0e35e9133396e5a5926960f7171d5832908286b9dee20c52f0a217547cb41a8b8420f011848ae23d7b22927b6e
+MISC ChangeLog 13070 SHA256 5f31bf58590de40c19ff9d6f4e41909f49bc69c4c8a2cdc03190b96900f3242f SHA512 d99f7e1746246abe6cf96ce90a0ee721fbd22d89b364ab86229e2f24b0d90be08b8dc13f50c70de60c87dd97069f91075c22967ceb03df9e840205a26154bd92 WHIRLPOOL f2a6619ea539c92d03449ef6136dcfbc91d81b107dfcfa057a501d4df25ff83add07449d3df08fd698125aac07c020bcbf6ca9afc68c3df5bc43d208ac9adeca
 MISC metadata.xml 718 SHA256 f09401b27714eef1fa1d93931a6d79202861515bff4fc65696051ce3b02934dc SHA512 d7f28ddf829f1a652bb1595b739df5b3645ab67e0b4e625e5265e2e4cf91d9eec482ce17ae3d64446f6175b5620b4fda7522978bd196fc0f2681ab7cb9eac9d3 WHIRLPOOL af259deda9fe17c5fdd7c26d545ad983aaab3b95acb8e7f50e383d82d9dad59744c33d58bf79f69ae84ef9ffe22269c5caaedd89102b399874504bc7d036c2fe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlTzTqYACgkQaezjy7sObpjDnAD8DOpu4cRF1V/h6GqVsAjlLGYH
-HGTh6dSSHTzLHW/4G2UBAJOkKszuVNxnEIgc3WWCMFg/fFEo6buAOkJffrTH1HqK
-=fnZx
+iF4EAREIAAYFAlT2IXMACgkQaezjy7sObph0LAEAk4usTFbn76gg+RFn/Nu+3P3x
+S10eamV1BmBy70nc/1cBAJbbsdgP/+gcnQ6jAMGosCjLmcRHogDrWmLSDd+IZRYE
+=LmWY
 -----END PGP SIGNATURE-----
