@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/dokuwiki
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/dokuwiki/ChangeLog,v 1.75 2015/03/01 17:39:24 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/dokuwiki/ChangeLog,v 1.76 2015/03/03 21:03:24 jmbsvicetto Exp $
+
+*dokuwiki-20140505d (03 Mar 2015)
+
+  03 Mar 2015; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  +dokuwiki-20140505d.ebuild:
+  Add 20140525d release - bug 541918 (CVE-2015-2172).
 
 *dokuwiki-20140929c (01 Mar 2015)
 
